<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    tools:context=".motorizado.LoginAsDelivery">

    <RelativeLayout
        android:id="@+id/rel_header"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/toolbarheight"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:text="@string/delivery_boy_login"
            android:textColor="#fff"
            android:textSize="@dimen/toolbartitle" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_center"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/rel_header"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="Conductores"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingRight="20dp"
            android:text="@string/intro_app"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView1"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_email"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:hint="@string/email_required"
                    android:importantForAutofill="noExcludeDescendants"
                    android:inputType="textEmailAddress"
                    android:textAlignment="viewStart"
                    android:textColor="#000"
                    android:textSize="@dimen/medium" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/input_layout_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_pwd"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:hint="@string/passward_required"
                    android:importantForAutofill="noExcludeDescendants"
                    android:inputType="textPassword"
                    android:textAlignment="viewStart"
                    android:textColor="#000"
                    android:textSize="@dimen/medium" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_login"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_below="@+id/input_layout_password"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/checkout_btn"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/txt_login"
                android:textAllCaps="false"
                android:textColor="#FFF"
                android:textSize="@dimen/medium"
                android:textStyle="bold" />


        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>